<resources>
    <string name="app_name">StoryApplication</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="auth_login">Login?</string>
    <string name="auth_register">Register?</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">description</string>
    <string name="upload">Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">retry</string>
</resources>